--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
 .pensil-web-sdk {
-    @tailwind base;
-    @tailwind components;
-    @tailwind utilities;
+    @import "tailwind.style";
+    @import "custom.style";
 }
