added minimal theming support

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,3 +1,11 @@
+/* theme related changes */
+
+.text-theme-primary {
+    color: var(--pensil-theme-primary-color);
+}
+
+/* other */
+
 .SectionDetail {
     background-color: pink;
 }
