--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,11 +1,271 @@
-/* theme related changes */
-
-.text-theme-primary {
-    color: var(--pensil-theme-primary-color);
+.SectionDetail {
+    background-color: var(--pensil-theme-background-color);;
+}
+.PostCard {
+    position: relative;
+    min-width: 476px;
+    overflow: hidden; 
 }
 
-/* other */
-
-.SectionDetail {
-    background-color: pink;
+.IconMenu {
+  position: relative; 
+}
+.IconMenu .dropdown {
+   position: absolute;
+   width: 180px;
+   right: 0;
+   display: none; 
+}
+.IconMenu .dropdown .dropdown-label {
+   cursor: pointer;
+   padding: 8px 12px;
+   font-size: small; 
+}
+.IconMenu .dropdown .dropdown-label:hover {
+ background-color: #0000000a; 
+}
+.IconMenu.active .dropdown {
+  display: block;
+ }
+ .MeetingPage {
+  position: fixed;
+  z-index: 123;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: black; 
+}
+.MeetingPage .message {
+    color: white; 
+}
+.PostCard {
+  border-radius: 4px;
+  .tags-container {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 10px;
+      .tag-body {
+          box-sizing: border-box;
+          border-radius: 12px;
+          padding: 3px 10px;
+          margin-bottom: 10px;
+      }
+  }
+  .PostEmbedCodeViewer {
+      width: 100%;
+      min-height: 340px;
+  }
+}
+.PostCard {
+  position: relative;
+  min-width: 476px;
+  // max-width: 100%;
+  // overflow: hidden;
+  .PostImageFullPreview {
+      position: fixed;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background-color: #0003;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 200;
+      div.holder {
+          padding: 21px;
+          position: relative;
+          img {
+              max-height: 95vh;
+          }
+          .close-button {
+              position: absolute;
+              top: 6px;
+              right: 6px;
+              background-color: white;
+          }
+      }
+  }
+  .PostHeader {
+      position: relative;
+      .dropdown {
+          position: absolute;
+          top: 32px;
+          right: 12px;
+          z-index: 1;
+          // width: 150px;
+          .dropdown-button {
+              cursor: pointer;
+              display: block;
+              width: 100%;
+          }
+      }
+      .PostLiveStatus {
+          display: flex;
+          align-items: center;
+          border-radius: 15px;
+          margin: 0 6px;
+          img {
+              width: 21px;
+              margin: 4px;
+              margin-left: 8px;
+              margin-right: 0;
+          }
+          span {
+              font-weight: 600;
+              font-size: small;
+              padding: 2px 5px;
+          }
+          &.live {
+              background-color: red;
+              span {
+                  color: white;
+              }
+          }
+          &.ended {
+              background-color: #ddd;
+              span {
+                  color: #232323;
+              }
+          }
+      }
+  }
+  .PostDescription {
+      p {
+          margin: 12px 0;
+          word-break: break-word;
+      }
+      pre {
+          white-space: pre-wrap;
+      }
+      a,
+      // a:visited {
+      //     color: $pensilBlue;
+      // }
+      blockquote {
+          overflow: hidden;
+          padding-right: 1.5em;
+          padding-left: 1.5em;
+          margin-left: 0;
+          margin-right: 0;
+          font-style: italic;
+          border-left: 5px solid #ccc;
+      }
+      &.has-more {
+          .NL2BR {
+              overflow: hidden;
+              max-height: 140px;
+              position: relative;
+              &::after {
+                  position: absolute;
+                  content: "";
+                  display: block;
+                  height: 24px;
+                  width: 100%;
+                  bottom: 0;
+                  left: 0;
+                  right: 0;
+                  background-image: linear-gradient(#fff0, var(--theme-surface-color));
+              }
+          }
+          .read-more {
+              cursor: pointer;
+          }
+      }
+  }
+  .PostImages {
+      .PostImage {
+          .more {
+              position: absolute;
+              color: white;
+              z-index: 1;
+              background-color: #0003;
+              left: 0;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              font-size: 35px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+          }
+      }
+  }
+  .PostQuestion {
+      .option {
+          display: flex;
+          align-items: center;
+          .label {
+              background-color: #ccc;
+              width: 21px;
+              height: 21px;
+              display: block;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-radius: 50%;
+              font-weight: 500px;
+              margin-right: 12px;
+          }
+          padding: 5px 10px;
+          margin: 5px 0;
+          cursor: pointer;
+          // &:hover {
+          //     background-color: #eee;
+          // }
+          &.correct {
+              color: white;
+              background-color: #28b446;
+              .label {
+                  color: black;
+              }
+              &.hover {
+                  background-color: #28b446;
+              }
+          }
+          &.selected {
+              background-color: #eee;
+              &.hover {
+                  background-color: #c42430;
+              }
+          }
+          &.incorrect {
+              color: white;
+              background-color: #c42430;
+              .label {
+                  color: black;
+              }
+              &.hover {
+                  background-color: #c42430;
+              }
+          }
+      }
+  }
+  .PostProcessing {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      z-index: 2;
+      background-color: #fffb;
+  }
+}
+//  Loader animation
+.spinner {
+    animation: spinner 0.75s ease-in-out infinite; 
+}
+@keyframes spinner {
+ 0% {
+   transform: rotate(0); }
+ 100% {
+   transform: rotate(360deg); } 
+}
+  
+.eventBannerImage{
+    padding-top: 56.25%; /* Aspect ratio 16/9 */
 }
