Create/Display Replies on comments

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@
 .pensil-web-sdk {
     @import "tailwind.style";
     @import "custom.style";
-    @import 'theme';
+    @import 'theme.style';
     @import 'regular-uicons';
     @import 'solid-uicons';
 }
